* project name change to redokast

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-makokast is a podcast encoding and web page generation system based on apenwarr's implementation of djb's redo.
+redokast is a podcast encoding and web page generation system based on apenwarr's implementation of djb's redo.
