--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 redokast is a podcast encoding and web page generation system using apenwarr's implementation of djb's redo.
 
-Besides redo, it needs oggenc, vorbiscomment and GNU grep.
+Besides redo, it needs oggenc, vorbiscomment (both from vorbistools), date and grep (from GNU coreutils).
 
 Try “redo index.html” to see how everything gets build.
